Stop List.of usage because target version is 1.8